--- a/platforms/android/assets/www/css/style.css
+++ b/platforms/android/assets/www/css/style.css
@@ -95,6 +95,21 @@
 	border-bottom:1px solid #0091E4;
 	margin:5px;
 }
+
+.titulo_pop
+{
+	font-size:13px;		
+	font-weight:normal;	
+	margin-left:5px;
+	color:#4E4E4E;
+}
+.titulo_pop2
+{
+	font-size:12px;		
+	font-weight:normal;	
+	margin-left:5px;
+	color:#4E4E4E;
+}
 .titulo3
 {
 	font-size:13px;
@@ -246,7 +261,14 @@
 	width=50%;
 	margin-left:20%;
 }
-
+.msg_error2
+{
+	color:#0091E4 !important;
+	font-weight:bold;
+	font-size:80% !important;	 
+	width=50%;
+	margin-left:2%;
+}
 #list_mail_marca
 {
 	display:none;
@@ -271,4 +293,19 @@
 	display:none;
 	width: 70px;
 	height: 100px;
+}
+#map
+{
+	height:80% !important;
+}
+
+.boton_pop
+{
+	width:100px !important;
+	height:40px !important;
+	font-size:13px;		
+	font-weight:bold;	
+	background-color:#0091E4;
+	color:#EAEAEA;
+	
 }
