--- a/www/css/style.css
+++ b/www/css/style.css
@@ -55,7 +55,7 @@
 {
 	background:url(../images/field-user.png) no-repeat center right !important;
 }
-#mail_reg, #mail_ses,#mail_lug
+#mail_reg, #mail_ses,#mail_lug,#mail_emp
 {
 	background:url(../images/field-mail.png) no-repeat center right !important;
 }
